--- a/styles.css
+++ b/styles.css
@@ -3,15 +3,65 @@
   font-family: "roboto", sans-serif;
   font-weight: 400;
 }
+h2 {
+  color: #404445;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: bold;
+  line-height: 47px;
+}
+@media only screen and (max-width: 575px) {
+  h2 {
+    font-size: 34px;
+    line-height: 40px;
+  }
+}
+h2.white {
+  color: white;
+}
+p.sub-heading {
+  color: #5f6b81;
+
+  font-size: 18px;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 23px;
+}
+p.sub-heading.white {
+  color: white;
+}
+.btn {
+  padding: 14px 50px;
+}
 .btn-primary {
   border-radius: 5px;
   background: #43c45f;
   border-color: #43c45f;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
 }
-.btn-primary:hover {
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:focus {
   border-radius: 5px;
   background: #43c45f;
   border-color: #43c45f;
+}
+.video-wrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+}
+.video-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 .navbar {
   padding-top: 20px;
@@ -41,7 +91,7 @@
   font-weight: normal;
   line-height: 19px;
 }
-@media only screen and(max-width:991px) {
+@media only screen and (max-width: 991px) {
   .navbar .navbar-nav .nav-item .nav-link {
     font-size: 18px;
     line-height: 28px;
@@ -55,7 +105,7 @@
 .navbar .navbar-nav .nav-item .nav-link:hover {
   color: #43c45f;
 }
-@media only screen and(max-width: 991px) {
+@media only screen and (max-width: 991px) {
   .navbar .navbar-nav {
     text-align: center;
   }
@@ -64,6 +114,24 @@
   .navbar .navbar-nav .nav-item:not(:first-child) {
     margin-left: 37px;
   }
+}
+/*===============================================
+skilciu bendri stiliai
+===============================================*/
+.page-section {
+  padding-top: 112px;
+  padding-bottom: 112px;
+}
+.page-section .page-section-header-row {
+  text-align: center;
+}
+.page-section .page-section-header-row p.sub-heading {
+  width: 100%;
+  max-width: 648px;
+  margin: 0 auto;
+}
+.page-section .page-section-header-row h2 {
+  margin-bottom: 25px;
 }
 
 /*========================================
@@ -84,6 +152,12 @@ Pradinio puslapio stiliai
 .home-page header .container .row {
   height: 100%;
 }
+@media only screen and (max-width: 575px) {
+  .home-page header h1 {
+    font-size: 54px;
+    line-height: 63px;
+  }
+}
 .home-page header h1 {
   color: #fff;
   font-size: 70px;
@@ -101,4 +175,56 @@ Pradinio puslapio stiliai
   max-width: 681px;
   width: 100%;
   margin: 33px auto 49px;
+}
+/*general information stilia*/
+
+@media only screen and (min-width: 992px) {
+  .home-page
+    .general-information
+    .text-information-col
+    .information-block:nth-child(-n + 2) {
+    margin-bottom: 52px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .home-page .general-information .text-information-col .information-block {
+    margin-bottom: 52px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .home-page .general-information .text-information-col .information-block {
+    margin-bottom: 49px;
+    text-align: center;
+  }
+}
+
+.home-page .general-information .text-information-col .information-block h3 {
+  color: #404445;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 26px;
+  margin: 18px 0 10px;
+}
+
+.home-page .general-information .text-information-col .information-block p {
+  color: #5f6b81;
+
+  font-size: 16px;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 20px;
+  margin-bottom: 0;
+}
+
+.home-page .general-information .foto-col {
+}
+/*===============================
+video section stiliai
+================================*/
+.home-page .video-section {
+  background: #f1f8ff;
+}
+.home-page .video-section .video-col {
+  margin-top: 54px;
 }
